[package]
name = "reservation_system"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "chrono" ] }
anyhow = { version = "1" }
dotenv = "0.15.0"
async-trait = "0.1.51"
actix-web = "4.0.0-beta.11"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.70"
askama = "0.10.5"
chrono = { version = "0.4.19", features = [ "serde" ] }
actix-files = "0.6.0-beta.8"

[build-dependencies]
askama = "0.10.5"