[package]
name = "reservation_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "reservation_system_server"
path = "src/server.rs"

[[bin]]
name = "reservation_system_client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
prost-types = "0.9.0"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "chrono" ] }
anyhow = { version = "1" }
dotenv = "0.15.0"
async-trait = "0.1.51"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.70"
chrono = { version = "0.4.19", features = [ "serde" ] }
askama = "0.10.5"

[build-dependencies]
askama = "0.10.5"
tonic-build = "0.6"